; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_irqsoff.c_check_critical_timing.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_irqsoff.c_check_critical_timing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { i32 }
%struct.trace_array_cpu = type { i64, i64, i8* }

@max_trace_lock = common dso_local global i32 0, align 4
@CALLER_ADDR0 = common dso_local global i32 0, align 4
@max_sequence = common dso_local global i64 0, align 8
@tracing_max_latency = common dso_local global i8* null, align 8
@current = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trace_array*, %struct.trace_array_cpu*, i64, i32)* @check_critical_timing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_critical_timing(%struct.trace_array* %0, %struct.trace_array_cpu* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.trace_array*, align 8
  %6 = alloca %struct.trace_array_cpu*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.trace_array* %0, %struct.trace_array** %5, align 8
  store %struct.trace_array_cpu* %1, %struct.trace_array_cpu** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %14 = load %struct.trace_array_cpu*, %struct.trace_array_cpu** %6, align 8
  %15 = getelementptr inbounds %struct.trace_array_cpu, %struct.trace_array_cpu* %14, i32 0, i32 2
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %9, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i8* @ftrace_now(i32 %17)
  store i8* %18, i8** %10, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = ptrtoint i8* %19 to i64
  %22 = ptrtoint i8* %20 to i64
  %23 = sub i64 %21, %22
  %24 = inttoptr i64 %23 to i8*
  store i8* %24, i8** %11, align 8
  %25 = load i64, i64* %12, align 8
  %26 = call i32 @local_save_flags(i64 %25)
  %27 = call i32 (...) @preempt_count()
  store i32 %27, i32* %13, align 4
  %28 = load i8*, i8** %11, align 8
  %29 = call i32 @report_latency(i8* %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %4
  br label %74

32:                                               ; preds = %4
  %33 = load i64, i64* %12, align 8
  %34 = call i32 @spin_lock_irqsave(i32* @max_trace_lock, i64 %33)
  %35 = load i8*, i8** %11, align 8
  %36 = call i32 @report_latency(i8* %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %32
  br label %71

39:                                               ; preds = %32
  %40 = load %struct.trace_array*, %struct.trace_array** %5, align 8
  %41 = load i32, i32* @CALLER_ADDR0, align 4
  %42 = load i64, i64* %7, align 8
  %43 = load i64, i64* %12, align 8
  %44 = load i32, i32* %13, align 4
  %45 = call i32 @trace_function(%struct.trace_array* %40, i32 %41, i64 %42, i64 %43, i32 %44)
  %46 = load %struct.trace_array_cpu*, %struct.trace_array_cpu** %6, align 8
  %47 = getelementptr inbounds %struct.trace_array_cpu, %struct.trace_array_cpu* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* @max_sequence, align 8
  %50 = icmp ne i64 %48, %49
  br i1 %50, label %51, label %52

51:                                               ; preds = %39
  br label %71

52:                                               ; preds = %39
  %53 = load i64, i64* %7, align 8
  %54 = load %struct.trace_array_cpu*, %struct.trace_array_cpu** %6, align 8
  %55 = getelementptr inbounds %struct.trace_array_cpu, %struct.trace_array_cpu* %54, i32 0, i32 1
  store i64 %53, i64* %55, align 8
  %56 = call i32 (...) @is_tracing_stopped()
  %57 = icmp ne i32 %56, 0
  %58 = xor i1 %57, true
  %59 = zext i1 %58 to i32
  %60 = call i64 @likely(i32 %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %68

62:                                               ; preds = %52
  %63 = load i8*, i8** %11, align 8
  store i8* %63, i8** @tracing_max_latency, align 8
  %64 = load %struct.trace_array*, %struct.trace_array** %5, align 8
  %65 = load i32, i32* @current, align 4
  %66 = load i32, i32* %8, align 4
  %67 = call i32 @update_max_tr_single(%struct.trace_array* %64, i32 %65, i32 %66)
  br label %68

68:                                               ; preds = %62, %52
  %69 = load i64, i64* @max_sequence, align 8
  %70 = add nsw i64 %69, 1
  store i64 %70, i64* @max_sequence, align 8
  br label %71

71:                                               ; preds = %68, %51, %38
  %72 = load i64, i64* %12, align 8
  %73 = call i32 @spin_unlock_irqrestore(i32* @max_trace_lock, i64 %72)
  br label %74

74:                                               ; preds = %71, %31
  %75 = load i64, i64* @max_sequence, align 8
  %76 = load %struct.trace_array_cpu*, %struct.trace_array_cpu** %6, align 8
  %77 = getelementptr inbounds %struct.trace_array_cpu, %struct.trace_array_cpu* %76, i32 0, i32 0
  store i64 %75, i64* %77, align 8
  %78 = load i32, i32* %8, align 4
  %79 = call i8* @ftrace_now(i32 %78)
  %80 = load %struct.trace_array_cpu*, %struct.trace_array_cpu** %6, align 8
  %81 = getelementptr inbounds %struct.trace_array_cpu, %struct.trace_array_cpu* %80, i32 0, i32 2
  store i8* %79, i8** %81, align 8
  %82 = load %struct.trace_array*, %struct.trace_array** %5, align 8
  %83 = load i32, i32* @CALLER_ADDR0, align 4
  %84 = load i64, i64* %7, align 8
  %85 = load i64, i64* %12, align 8
  %86 = load i32, i32* %13, align 4
  %87 = call i32 @trace_function(%struct.trace_array* %82, i32 %83, i64 %84, i64 %85, i32 %86)
  ret void
}

declare dso_local i8* @ftrace_now(i32) #1

declare dso_local i32 @local_save_flags(i64) #1

declare dso_local i32 @preempt_count(...) #1

declare dso_local i32 @report_latency(i8*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @trace_function(%struct.trace_array*, i32, i64, i64, i32) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @is_tracing_stopped(...) #1

declare dso_local i32 @update_max_tr_single(%struct.trace_array*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
